--- a/PHANTASMAGORIUM/categories.html
+++ b/PHANTASMAGORIUM/categories.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>PHANTASMAGORIUM Categories</title>
+    <title>PHANTASMAGORIUM</title>
 
-    <meta name="author" content="Ven">
-    <meta name="keywords" content="HTML, CSS">
-    <meta name="revised" content="07-09-2025">
+    <meta name="author" content="The Authors of Phantasmagorium">
+    <meta name="keywords" content="HTML, CSS, SR">
+    <meta name="revised" content="07/12/2025">
 
     <link rel="icon" type="image/png" href="media/images/logo_mini.png">
     <link rel="stylesheet" href="style.css">
@@ -14,33 +14,33 @@
 <body>
 	<script src="script.js" defer></script>
 	<header>
-		<nav>
-			<!--Navigation Bar-->
-			<div class="navbar">
-				<a id="logo" href="homepage.html">
-					<img src="media/images/logo_mini.png">
-				</a>
-				<a href="credits.html">Attributions</a>
-				<a href="media.html">Media</a>
-				<a href="categories/post_ch3-4.html">Post Ch. 3-4</a>
-				<a href="categories/post_ch2.html">Post Ch. 2</a>
-				<a href="categories/post_ch1.html">Post Ch. 1</a>
-				<a href="homepage.html">Homepage</a>
-			</div>
-            <div id="brnav"></div>
-		
-			<!--Breadcrumb-->
-			<div class="bcrumb">
-				<a href="homepage.html">Homepage</a> &gt;
-				<a href="categories.html">Categories</a>
-			</div><br>
-		</nav>
+        <nav>
+            <!--Navigation Bar-->
+            <div class="navbar">
+                <a id="logo" href="homepage.html">
+                    <img src="media/images/PGORIUM.png">
+                </a>
+                <a href="credits.html">Attributions</a>
+                <a href="media.html">Media</a>
+                <a href="categories/items.html">Items</a>
+                <a href="categories/events.html">Events</a>
+                <a href="categories/regions.html">Regions</a>
+                <a href="categories/mechanics.html">Mechanics</a>
+                <a href="homepage.html" id="active">Homepage</a>
+            </div>
+			<div id="brnav"></div>
+
+            <!--Breadcrumb-->
+            <div class="bcrumb">
+                <a href="homepage.html">Homepage</a>
+            </div><br>
+        </nav>
 
 		<!--Logo-->
 			<a href="homepage.html">
 			<div class="logobox">
-				<img id="fulllogo" src="media/images/logo_big.png" alt="DeltaTheory Logo">
-				<img id="altlogo"  src="media/images/logo_rk.png"  alt="DeltaTheory Logo (alt)">
+				<img id="fulllogo" src="media/images/STAR.png" alt="PHANTASMAGORIUM Logo">
+				<img id="altlogo"  src="media/images/PGORIUM.png"  alt="PHANTASMAGORIUM Logo (alt)">
 			</div>
             </a>
 
@@ -53,8 +53,8 @@
 					<span id="bgm-text"></span>
 				</div>
 				<!--Audio Player-->
-				<audio id="bgm-audio" loop controls>
-				<source src="media/audio/MOODSWING.mp3" type="audio/mp3">
+				<audio id="bgm-audio" loop controls autoplay>
+				<source src="media/audio/phantasmagoria.mp3" type="audio/mp3">
 				Your browser does not support the audio tag.
 				</audio>
 				<!--Controls-->
@@ -64,7 +64,7 @@
 				</div>
 			</div>
 			</div>
-	</header>
+    </header>
 
 	<div id="black">	
 	<hr id="separator">
