--- a/PHANTASMAGORIUM/media.html
+++ b/PHANTASMAGORIUM/media.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>DeltaTheory Media</title>
+    <title>PHANTASMAGORIUM Categories</title>
 
     <meta name="author" content="Ven">
     <meta name="keywords" content="HTML, CSS">
-    <meta name="revised" content="03-10-2025">
+    <meta name="revised" content="07-09-2025">
 
     <link rel="icon" type="image/png" href="media/images/logo_mini.png">
     <link rel="stylesheet" href="style.css">
@@ -18,21 +18,21 @@
             <!--Navigation Bar-->
             <div class="navbar">
                 <a id="logo" href="homepage.html">
-                    <img src="media/images/logo_mini.png">
+                    <img src="media/images/PGORIUM.png">
                 </a>
                 <a href="credits.html">Attributions</a>
                 <a href="media.html" id="active">Media</a>
-                <a href="categories/post_ch3-4.html">Post Ch. 3-4</a>
-                <a href="categories/post_ch2.html">Post Ch. 2</a>
-                <a href="categories/post_ch1.html">Post Ch. 1</a>
+                <a href="categories/items.html">Items</a>
+                <a href="categories/events.html">Events</a>
+                <a href="categories/regions.html">Regions</a>
+                <a href="categories/mechanics.html">Mechanics</a>
                 <a href="homepage.html">Homepage</a>
             </div>
-            <div id="brnav"></div>
+			<div id="brnav"></div>
         
             <!--Breadcrumb-->
             <div class="bcrumb">
                 <a href="homepage.html">Homepage</a> &gt;
-                <a href="categories.html">Categories</a> &gt;
                 <a href="media.html">Media</a>
             </div><br>
         </nav>
@@ -40,8 +40,8 @@
         <!--Logo-->
 			<a href="homepage.html">
 			<div class="logobox">
-				<img id="fulllogo" src="media/images/logo_big.png" alt="DeltaTheory Logo">
-				<img id="altlogo"  src="media/images/logo_rk.png"  alt="DeltaTheory Logo (alt)">
+				<img id="fulllogo" src="media/images/STAR.png" alt="PHANTASMAGORIUM Logo">
+				<img id="altlogo"  src="media/images/PGORIUM.png"  alt="PHANTASMAGORIUM Logo (alt)">
 			</div>
             </a>
 
