Further reformatting and merging

--- a/PHANTASMAGORIUM/404.html
+++ b/PHANTASMAGORIUM/404.html
@@ -22,7 +22,7 @@
 </head>
 <body>
     <a href="homepage.html">
-        <img src="media/images/dog_check.gif"
+        <img src="media/images/"
         alt="dog! click to homepage"
         title="dog! click to homepage">
     </a>
