--- a/PHANTASMAGORIUM/categories.html
+++ b/PHANTASMAGORIUM/categories.html
@@ -32,7 +32,8 @@
 
             <!--Breadcrumb-->
             <div class="bcrumb">
-                <a href="homepage.html">Homepage</a>
+                <a href="homepage.html">Homepage</a> &gt;
+				<a href="categories.html">Categories</a>
             </div><br>
         </nav>
 
@@ -72,23 +73,25 @@
 	<section>
 		<h1>CATEGORIES</h1>
 		<div class="grid">
-			<!--Post Chapter 1 Theories-->
-			<a href="categories/post_ch1.html">
-				<img src="media/images/ch1.png" title="Before CH2">
-				<span id="catitle">Post Chapter 1 Theories</span>
+			<!--Mechanics-->
+			<a href="categories/mechanics.html">
+				<img src="media/images/magic.png" title="Mechanics">
+				<span id="catitle">Mechanics</span>
 			</a>
-			<!--Post Chapter 2 Theories-->
-			<a href="categories/post_ch2.html">
-				<img src="media/images/ch2.png" title="Before CH3-4">
-				<span id="catitle">Post Chapter 2 Theories</span>
+			<!--Regions-->
+			<a href="categories/regions.html">
+				<img src="media/images/map.png" title="Regions">
+				<span id="catitle">Regions</span>
 			</a>
-			<!--Post Chapter 3-4 Theories-->
-			<a href="categories/post_ch3-4.html">
-				<span>
-					<img src="media/images/ch3.png" title="Before CH5">
-					<img src="media/images/ch4.png" title="Before CH5">
-				</span>
-				<span id="catitle">Post Chapter<br> 3-4 Theories</span>
+			<!--Events-->
+			<a href="categories/events.html">
+				<img src="media/images/quest.png" title="Events">
+				<span id="catitle">Events</span>
+			</a>
+			<!--Items-->
+			<a href="categories/items.html">
+				<img src="media/images/bag.png" title="Items">
+				<span id="catitle">Events</span>
 			</a>
 		</div>
 	</section>
@@ -119,18 +122,13 @@
 				<a href="categories.html">Categories</a>
 			</div><br>
 		</nav>
-        <!--"Copyright"-->
+    	<!--"Copyright"-->
         <span>
-            DeltaTheory (2025). Credits to DeltaExplained. All rights reserved.<br>
+            © 2025 Shattered Reflections. All rights reserved.<br>
             Any and all media content is the property of their respective owners,
-            with any unattributed media belonging to Undertale, Deltarune, DeltaTheory, DeltaExplained, or public domain.<br><br>
+            with any unattributed media belonging to the owners/creators of
+			Shattered Reflections or public domain.<br><br>
         </span>
-        <!--Socials-->
-        <div class="socials">
-            <a href="https://x.com/Ven_TGM09"></a>
-            <a href="https://www.youtube.com/@VenThusiaist"></a>
-            <a href="https://mail.google.com/mail/?view=cm&fs=1&to=ventgm09@gmail.com"></a>
-        </div>
 	</footer>
 	</div>
 </body>
