--- a/PHANTASMAGORIUM/credits.html
+++ b/PHANTASMAGORIUM/credits.html
@@ -55,7 +55,7 @@
 				</div>
 				<!--Audio Player-->
 				<audio id="bgm-audio" loop controls autoplay>
-				<source src="media/audio/MOODSWING.mp3" type="audio/mp3">
+				<source src="media/audio/phantasmagoria.mp3" type="audio/mp3">
 				Your browser does not support the audio tag.
 				</audio>
 				<!--Controls-->
@@ -111,22 +111,16 @@
             <!--Breadcrumb-->
             <div class="bcrumb">
                 <a href="homepage.html">Homepage</a> &gt;
-                <a href="categories.html">Categories</a> &gt;
                 <a href="media.html">Media</a>
             </div><br>
         </nav>
         <!--"Copyright"-->
         <span>
-            DeltaTheory (2025). Credits to DeltaExplained. All rights reserved.<br>
+            © 2025 Shattered Reflections. All rights reserved.<br>
             Any and all media content is the property of their respective owners,
-            with any unattributed media belonging to Undertale, Deltarune, DeltaTheory, DeltaExplained, or public domain.<br><br>
+            with any unattributed media belonging to the owners/creators of
+			Shattered Reflections or public domain.<br><br>
         </span>
-        <!--Socials-->
-        <div class="socials">
-            <a href="https://x.com/Ven_TGM09"></a>
-            <a href="https://www.youtube.com/@VenThusiaist"></a>
-            <a href="https://mail.google.com/mail/?view=cm&fs=1&to=ventgm09@gmail.com"></a>
-        </div>
 	</footer>
 	</div>
             
