--- a/PHANTASMAGORIUM/homepage.html
+++ b/PHANTASMAGORIUM/homepage.html
@@ -138,7 +138,7 @@
 		</nav>
         <!--"Copyright"-->
         <span>
-            © 2025 PHANTASMAGORIUM. All rights reserved.<br>
+            © 2025 Shattered Reflections. All rights reserved.<br>
             Any and all media content is the property of their respective owners,
             with any unattributed media belonging to the owners/creators of
 			Shattered Reflections or public domain.<br><br>
