--- a/PHANTASMAGORIUM/media.html
+++ b/PHANTASMAGORIUM/media.html
@@ -55,7 +55,7 @@
 				</div>
 				<!--Audio Player-->
 				<audio id="bgm-audio" loop controls>
-				<source src="media/audio/MOODSWING.mp3" type="audio/mp3">
+				<source src="media/audio/phantasmagoria.mp3" type="audio/mp3">
 				Your browser does not support the audio tag.
 				</audio>
 				<!--Controls-->
@@ -76,103 +76,27 @@
         <!--Logos-->
         <h2>Logos</h2>
 		<div class="grid">
-            <!--Big DeltaTheory Logo-->
-            <a href="media/images/logo_big.png">
-                <img style="width: 86px" src="media/images/logo_big.png">
-                <span id="catitle">DeltaTheory<br>Logo (big)</span>
+            <!--SR Logo-->
+            <a href="media/images/SR.png">
+                <img style="width: 86px" src="media/images/SR.png">
+                <span id="catitle">SR Logo</span>
             </a>
-            <!--Mini DeltaTheory Logo-->
-            <a href="media/images/logo_mini.png">
-                <img style="width: 86px" src="media/images/logo_mini.png">
-                <span id="catitle">DeltaTheory<br>Logo (mini)</span>
+            <!--STAR-->
+            <a href="media/images/STAR.png">
+                <img style="width: 86px" src="media/images/STAR.png">
+                <span id="catitle">STAR</span>
             </a>
-            <!--RK DeltaTheory Logo-->
-            <a href="media/images/logo_rk.png">
-                <img style="width: 86px" src="media/images/logo_rk.png">
-                <span id="catitle">DeltaTheory<br>Logo (RK)</span>
+            <!--PGORIUM-->
+            <a href="media/images/PGORIUM.png">
+                <img style="width: 86px" src="media/images/PGORIUM.png">
+                <span id="catitle">PHANTASMAGORIUM Logo</span>
             </a>
             <!--Deltarune Logo-->
-            <a href="media/images/deltarune.png">
-                <img style="width: 86px" src="media/images/deltarune.png">
-                <span id="catitle">Deltarune Logo</span>
-            </a>
-            <!--Socmed Spritesheet-->
-            <a href="media/images/icon_sheet.png">
-                <img style="width: 100px" src="media/images/icon_sheet.png">
-                <span id="catitle">Socmed Spritesheet</span>
+            <a href="media/images/NYCTO.png">
+                <img style="width: 86px" src="media/images/NYCTO.png">
+                <span id="catitle">NYCTO</span>
             </a>
         </div><br>
-        <!--Chapter Icons-->
-        <h2>Chapter Icons</h2>
-        <div class="grid">
-            <!--Chapter 0 Icon-->
-            <a href="media/images/ch0.png">
-				<img src="media/images/ch0.png">
-				<span id="catitle">Chapter 0 Icon</span>
-			</a>
-            <!--Chapter 1 Icon-->
-			<a href="media/images/ch1.png">
-				<img src="media/images/ch1.png">
-				<span id="catitle">Chapter 1 Icon</span>
-			</a>
-            <!--Chapter 2 Icon-->
-			<a href="media/images/ch2.png">
-				<img src="media/images/ch2.png">
-				<span id="catitle">Chapter 2 Icon</span>
-			</a>
-            <!--Chapter 3 Icon-->
-			<a href="media/images/ch3.png">
-                <img src="media/images/ch3.png">
-				<span id="catitle">Chapter 3 Icon</span>
-			</a>
-            <!--Chapter 4 Icon-->
-            <a href="media/images/ch4.png">
-                <img src="media/images/ch4.png">
-				<span id="catitle">Chapter 4 Icon</span>
-			</a>
-        </div><br>
-        <!--Battle Interface Options-->
-        <h2>Battle Interface Options</h2>
-        <div class="grid">
-            <!--Dog Option-->
-            <a href="media/images/dog_icon.gif">
-                <img src="media/images/dog_icon.gif">
-                <span id="catitle">Dog Option Icon</span>
-            </a>
-            <!--Item Option-->
-            <a href="media/images/item_icon.png">
-                <img src="media/images/item_icon.png">
-                <span id="catitle">Item Option Icon</span>
-            </a>
-        </div><br>
-        <!--Other-->
-        <h2>Other</h2>
-        <div class="grid">
-            <!--Chapter 1 Ending-->
-            <a href="media/images/genoch2.png">
-                <img style="width: 86px" src="media/images/genoch2.png">
-				<span id="catitle">Chapter 1 Ending</span>
-			</a>
-            <!--Dogcheck!-->
-            <a href="media/images/dog_check.gif">
-                <img style="width: 86px" src="media/images/dog_check.gif">
-				<span id="catitle">Dogcheck (Sleep)</span>
-			</a>
-        </div>
-        <!--Backgrounds-->
-        <h2>Backgrounds</h2>
-        <div class="grid">
-            <!--Depths-->
-            <a href="media/images/depths.png">
-                <img style="width: 86px" src="media/images/depths.png">
-				<span id="catitle">Depths<br>Background</span>
-			</a>
-            <!--Darker Depths-->
-            <a href="media/images/darker_and_darker.gif">
-                <img style="width: 86px" src="media/images/darker_and_darker.gif">
-				<span id="catitle">Darker Depths<br>Background</span>
-			</a>
-        </div>
 	</section>
 
 	<!--Audio-->
@@ -180,34 +104,29 @@
 		<h1>AUDIO</h1>
         <!--Fanmade-->
         <h2>Fanmade</h2>
+        <p>
+            No Fanmade AUDIO media used yet.
+        </p>
         <div class="grid" id="bigrid">
-            <!--MOODSWING by gronnblade-->
-            <a href="media/audio/MOODSWING.mp3">
-                <audio controls>
-                    <source src="media/audio/MOODSWING.mp3">
-                    Your browser does not support the audio tag.
-                </audio>
-                <span id="catitle"><i>MOODSWING</i><br>by gronnblade</span>
-            </a>
         </div><br>
         <!--Official-->
         <h2>Official</h2>
         <div class="grid" id="bigrid">
             <!--The Third Sanctuary by Toby Fox-->
-            <a href="media/audio/TheThirdSanctuary.mp3">
+            <a href="media/audio/phantasmagoria.mp3">
                 <audio controls>
-                    <source src="media/audio/TheThirdSanctuary.mp3">
+                    <source src="media/audio/phantasmagoria.mp3">
                     Your browser does not support the audio tag.
                 </audio>
-                <span id="catitle"><i>The Third Sanctuary</i><br>by Toby Fox</span>
+                <span id="catitle"><i>phantasmagoria</i><br>by VMN</span>
             </a>
             <!--Another day in Hometown by Toby Fox-->
-            <a href="media/audio/HometownReprise.mp3">
+            <a href="media/audio/WINTERWATER.mp3">
                 <audio controls>
-                    <source src="media/audio/HometownReprise.mp3">
+                    <source src="media/audio/WINTERWATER.mp3">
                     Your browser does not support the audio tag.
                 </audio>
-                <span id="catitle"><i>Another day in Hometown</i><br>by Toby Fox</span>
+                <span id="catitle"><i>WINTERWATER</i><br>by VMN</span>
             </a>
         </div><br>
 	</section>
@@ -216,74 +135,40 @@
 	<section>
 		<h1>VIDEO</h1>
         <!--Cutscenes-->
-        <h2>Cutscenes</h2>
+        <p>
+            No VIDEO media used yet.
+        </p>
         <div class="grid" id="bigrid">
-            <!--Chapter 1 Ending-->
-            <a href="media/video/ch1ending.mp4">
-                <video controls muted loop>
-                    <source src="media/video/ch1ending.mp4">
-                    Your browser does not support the video tag.
-                </video>
-                <span id="catitle">Chapter 1's Ending Cutscene</span>
-            </a>
-            <!--Post Genocide True Pacifist Stay Ending-->
-            <a href="media/video/pgtp_stay.mp4">
-                <video controls muted loop>
-                    <source src="media/video/pgtp_stay.mp4">
-                    Your browser does not support the video tag.
-                </video>
-                <span id="catitle">Undertale's Post Genocide True Pacifist Stay Ending</span>
-            </a>
-            <!--Post Genocide True Pacifist Leave Ending-->
-            <a href="media/video/pgtp_leave.mp4">
-                <video controls muted loop>
-                    <source src="media/video/pgtp_leave.mp4">
-                    Your browser does not support the video tag.
-                </video>
-                <span id="catitle">Undertale's Post Genocide True Pacifist Leave Ending</span>
-            </a>
-        </div><br>
-	</section>
-
-    <!--Fonts-->
-	<section>
-		<h1>FONTS</h1>
-        <div class="grid">
-            <!--MNC-->
-            <a href="media/fonts/MNC.ttf">
-                <span style="font-family: MNC;">AaBbCc</span>
-                <span id="catitle">MNC</span>
-            </a>
-            <!--Determination Mono-->
-            <a href="media/fonts/DTM-Mono.otf">
-                <span style="font-family: DTM-Mono;">AaBbCc</span>
-                <span id="catitle">Determination Mono</span>
-            </a>
         </div><br>
 	</section>
     
+    <!--Font-->
+	<section>
+		<h1>FONTS</h1>
+        <!--Fonts-->
+        <p>
+            No FONT media used yet.
+        </p>
+        <div class="grid" id="bigrid">
+        </div><br>
+	</section>
+
     <footer>
         <hr id="separator"><br>
         <nav>
             <!--Breadcrumb-->
             <div class="bcrumb">
                 <a href="homepage.html">Homepage</a> &gt;
-                <a href="categories.html">Categories</a> &gt;
                 <a href="media.html">Media</a>
             </div><br>
         </nav>
         <!--"Copyright"-->
         <span>
-            DeltaTheory (2025). Credits to DeltaExplained. All rights reserved.<br>
+            © 2025 Shattered Reflections. All rights reserved.<br>
             Any and all media content is the property of their respective owners,
-            with any unattributed media belonging to Undertale, Deltarune, DeltaTheory, DeltaExplained, or public domain.<br><br>
+            with any unattributed media belonging to the owners/creators of
+			Shattered Reflections or public domain.<br><br>
         </span>
-        <!--Socials-->
-        <div class="socials">
-            <a href="https://x.com/Ven_TGM09"></a>
-            <a href="https://www.youtube.com/@VenThusiaist"></a>
-            <a href="https://mail.google.com/mail/?view=cm&fs=1&to=ventgm09@gmail.com"></a>
-        </div>
 	</footer>
 	</div>
             
