--- a/PHANTASMAGORIUM/homepage.html
+++ b/PHANTASMAGORIUM/homepage.html
@@ -85,22 +85,22 @@
 		<div class="grid">
 			<!--Mechanics-->
 			<a href="categories/mechanics.html">
-				<img src="media/images/gears.png" title="Mechanics">
+				<img src="media/images/gears.png" title="Mechanics" height="100px">
 				<span id="catitle">Mechanics</span>
 			</a>
 			<!--Regions-->
 			<a href="categories/regions.html">
-				<img src="media/images/compass.png" title="Regions">
+				<img src="media/images/compass.png" title="Regions" height="100px">
 				<span id="catitle">Regions</span>
 			</a>
 			<!--Events-->
 			<a href="categories/events.html">
-				<img src="media/images/watch.png" title="Events">
+				<img src="media/images/watch.png" title="Events" height="100px">
 				<span id="catitle">Events</span>
 			</a>
 			<!--Items-->
 			<a href="categories/items.html">
-				<img src="media/images/bag.png" title="Items">
+				<img src="media/images/bag.png" title="Items" height="100px">
 				<span id="catitle">Items</span>
 			</a>
 		</div>
