Unfinished update & incomplete rennovation.

--- a/PHANTASMAGORIUM/media.html
+++ b/PHANTASMAGORIUM/media.html
@@ -61,6 +61,7 @@
 				<!--Controls-->
 				<div>
 					<button id="prev-btn">&lt; Prev</button>
+					<button id="auto-btn">Autoplay</button>
 					<button id="next-btn">Next 	&gt;</button>
 				</div>
 			</div>
